# numlock-tray

./: EXAMPLE.md  README.md  package.json  pnpm-lock.yaml
src-cli/: Cargo.toml  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
